Week 02 Exercise 02 updated

--- a/Week02 - Exercise 02 - Links, Lists and Tags.html
+++ b/Week02 - Exercise 02 - Links, Lists and Tags.html
@@ -8,23 +8,23 @@
 
 <h3>HTML</h3>
 	<ul>
-		<li>W3Schools</li>
-		<li>HTML5 Dog</li> 
-		<li>HTML5 Test</li>
+		<li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>
+		<li><a href="https://htmldog.com/" target="_blank">HTML5 Dog</a></li> 
+		<li><a href="https://html5test.com/" target="_blank">HTML5 Test</a></li>
 	</ul>
 	
 <h3>Tim Berners Lee</h3>
 	<ul>
-		<li>Tim Berners Lee – Wikipedia</li>
-		<li>Tim Berners Lee – Official Biography</li>
-		<li>Tim Berners Lee – Ted Talk</li>
+		<li><a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee" target="_blank">Tim Berners Lee – Wikipedia</a></li>
+		<li><a href="https://www.internethalloffame.org/official-biography-tim-berners-lee" target="_blank">Tim Berners Lee – Official Biography</a></li>
+		<li><a href="https://www.ted.com/talks/tim_berners_lee_the_next_web?language=en" target="_blank">Tim Berners Lee – Ted Talk</a></li>
 	</ul>
 
 <h3>Browser Stats 2018</h3> 
 	<ul>
-		<li>Browser Stats – W3Schools</li>
-		<li>Wikipedia.org – The Browser Wars</li>
-		<li>The True Story of the Internet Browser Wars (You Tube)</li>
+		<li><a href="https://www.w3schools.com/browsers/default.asp" target="_blank">Browser Stats – W3Schools</a></li>
+		<li><a href="https://en.wikipedia.org/wiki/Browser_wars" target="_blank">Wikipedia.org – The Browser Wars</a></li>
+		<li><a href="https://www.youtube.com/watch?v=VANORrzKX50" target="_blank">The True Story of the Internet Browser Wars (You Tube)</a></li>
 	</ul>
 	
 <h2><em>Future directions for the World Wide Web</em></h2>
@@ -48,17 +48,15 @@ which would configure itself so as to best use the resources available to the va
 optimize the quality of service perceived. This is not a simple problem.</p>
 
 <p>It includes the problems of:</p>
-<ol>
-<li>categorizing documents and users so as to be able to treat them in groups; 
-anticipating high usage of groups of documents by groups of users; 
-deciding on optimal placement of copies of data for rapid access; 
-an algorithm for finding the cheapest or nearest copy, given a URL; 
-Resolution of these problems must occur within a context in which different areas of the infrastructure 
-are funded through different bodies with different priorities and policies.
-</ol>
+	<ol type="i">
+		<li>categorizing documents and users so as to be able to treat them in groups;</li>
+		<li>anticipating high usage of groups of documents by groups of users;</li>
+		<li>deciding on optimal placement of copies of data for rapid access;</li>
+		<li>an algorithm for finding the cheapest or nearest copy, given a URL;</li>
+		<li>Resolution of these problems must occur within a context in which different areas of the infrastructure are funded through different bodies with different priorities and policies.</li>
+	</ol>
 
-These are some of the long term concerns about the infrastructure, the basic architecture of the web. In the shorter term, protocol designers are increasing the efficiency of HTTP communication, particularly for the case of a user whose performance limiting item is a telephone modem. 
-
+<p><i>These are some of the long term concerns about the infrastructure, the basic architecture of the web. In the shorter term, protocol designers are increasing the efficiency of HTTP communication, particularly for the case of a user whose performance limiting item is a telephone modem.</i></p>
 
 </body>
 </html>
