Week 02 Exercise 03 draft updated

--- a/Week02 - Exercise 03 - table.html
+++ b/Week02 - Exercise 03 - table.html
@@ -4,14 +4,43 @@
 	<title>TV listings</title>
 </head>
 <body>
-
-
-
-
-
-
-
-
-
+<!-- A table that shows TV Listings -->
+	<table border="3" cellpadding="3" cellspacing="2" align="center">
+		<tr>
+			<th colspan="6" bgcolor="yellow">TV LISTINGS</th>		
+		</tr>
+		<tr>
+			<th width="75"></th>
+			<th width="100">7.30pm</th>
+			<th width="100">8.00pm</th>
+			<th width="100">8.30pm</th>
+			<th width="100">9.00pm</th>
+			<th width="100">9.30pm</th>
+		</tr>
+		<tr align="center">
+			<th>Monday</th>
+			<td colspan="3" bgcolor="lightblue">The Sunday Movie</td>
+			<td colspan="2" bgcolor="grey">News</td>
+		</tr>
+		<tr align="center">
+			<th>Tuesday</th>
+			<td>TV Show</td>
+			<td colspan="2">The Monday Movie</td>
+			<td rowspan="3" bgcolor="cyan">News</td>
+			<td bgcolor="lightgreen">Talk Show</td>
+		</tr>
+		<tr align="center">
+			<th>Wednesday</th>
+			<td>TV Show</td>
+			<td colspan="2" rowspan="2">Cops</td>
+			<td>Current Affairs</td>
+		</tr>
+		<tr align="center">
+			<th>Thursday</th>
+			<td>TV Show</td>
+			<td bgcolor="lightgreen">Talk Show</td>
+		</tr>
+	</table>
+<!-- End of table -->
 </body>
 </html>
